kronolith/themes/screen.css
/* ... */
/* Loading spinner */
.kronolithLoading {
    position: absolute;
    left: 0;
}
#kronolithLoadingday, #kronolithLoadingmonth {
    top: 24px;
}
#kronolithLoadingweek {
    top: 2px;
}
#kronolithLoadingtasks, #kronolithLoadingagenda {
    display: inline-block;
    position: relative;
    top: -3px;
    vertical-align: middle;
}
#kronolithLoading, #kronolithFBLoading {
    background: transparent url("graphics/loading.gif") no-repeat center;
    padding: 2px;
    width: 16px;
    height: 16px;
    border: 1px #c0c0c0 solid;
}
#kronolithFBLoading {
    position: absolute;
    top: 65px;
    border: none;
}

/* User data and options */
#kronolithServices {
    float: right;
    margin-top: 10px;
    margin-right: 10px;
    text-align: right;
}
#kronolithNotifications {
    padding: 3px 5px;
    height: 25px;
    line-height: 25px;
}
.kronolithNotifications {
    background-color: #d9d9d9;
    opacity: .3;
    filter: alpha(opacity=30);
}

/* Main area */
#kronolithMain {
    clear: both;
    padding-top: 15px;
    height: 100%;
}

/* Left menu column */
#kronolithMenu {
    position: absolute;
    top: 10px;
    bottom: 10px;
    left: 10px;
    width: 153px;
}
#kronolithMenu .button {
	padding: 1px 2px;
}
#kronolithMenuCalendars {
    position: absolute;
    top: 265px;
    bottom: 0;
    width: 100%;
    overflow: auto;
    overflow-x: hidden;
    overflow-y: auto;
}
#kronolithMenu h3 {
    position: relative;
    margin-top: 15px;
    margin-bottom: 10px;
    font-size: 100%;
    font-weight: bold;
    border-bottom: 1px #000 dotted;
    cursor: default;
}
#kronolithMenu form {
    padding: 0;
    margin: 15px 0 5px 0;
}
#kronolithSearchForm {
    position: relative;
    top: 15px;
}
#kronolithSearchTerm {
    width: 127px;
    color: #ccc;
}
#kronolithSearchTerm:focus {
    width: 127px;
    color: #000;
}
#kronolithMenu h3#kronolithCalendarsFirst {
    margin-top: 0;
}
#kronolithMenu div#kronolithHolidayCalendars {
    margin-bottom: 0;
}
#kronolithMenu a.kronolithAdd {
    position: absolute;
    right: 0;
    width: 16px;
    padding-right: 8px;
    background: transparent url("graphics/plus.png") no-repeat right center;
    text-indent: -10000px;
    cursor: pointer;
}
#kronolithMenu div.kronolithCalendars {
    margin-bottom: 15px;
}
#kronolithMenu div.kronolithCalendars div {
    margin-bottom: 2px;
    padding: 2px 2px 2px 20px;
    background: url("graphics/checkbox_off.png") 2px center no-repeat;
    cursor: pointer;
}
#kronolithMenu div.kronolithCalendars div.kronolithCalOn {
    background-image: url("graphics/checkbox_on.png");
}
#kronolithMenu div.kronolithCalendars div.kronolithCalOver {
    text-decoration: underline;
}
#kronolithMenu div.kronolithCalendars .kronolithCalEdit {
    float: right;
    display: block;
    width: 16px;
    height: 16px;
    line-height: 16px;
    border: 1px solid #c0c0c0;
    background-color: #fff;
    text-align: center;
    cursor: pointer;
}
#kronolithAddEvents {
    margin-bottom: 18px;
}
#kronolithAddEvents span {
    /* We need some style here. */
    float: left;
    font-weight: bold;
    cursor: pointer;
}
#kronolithAddEvents span.accessKey {
    float: none;
}
span#kronolithNewEvent {
    width: 121px;
    margin-right: 10px;
    text-align: center;
}
span#kronolithQuickEvent {
    width: 16px;
    height: 16px;
    background: transparent url("graphics/new.png") no-repeat;
    text-indent: -10000px;
}

/* Quick edit */
#kronolithQuickinsert {
    position: absolute;
    z-index: 110;
    left: 163px;
    top: 10px;
    width: 350px;
    height: auto;
    margin: 0;
    padding: 0;
    background: transparent url("graphics/back_quick.png") no-repeat left top;
}
#kronolithQuickinsert form {
    padding:  5px;
    margin: 5px 5px 5px 15px;
}
#kronolithQuickinsert label {
    font-weight: bold;
}

a.kronolithFormCancel {
    cursor: pointer;
    text-decoration: underline;
}
.kronolithFormInfo {
    font-style: italic;
}

/* Navigation bar */
#kronolithBar {
    position: absolute;
    left: 175px;
    top: 10px;
}
#kronolithBar form {
    float: left;
    margin: 0;
}
#kronolithBar .kronolithDateChoice {
    float: left;
    margin: 0 2px 0 0;
    background: #d6d6d6;
    -moz-border-radius: 5px;
    -webkit-border-radius: 5px;
    font-weight: bold;
    cursor: pointer;
}
#kronolithBar .kronolithDateChoice div {
    padding: 0 10px;
    height: 25px;
    line-height: 25px;
}

#kronolithNav {
    float: left;
    margin-left: 5px;
    height: 25px;
    line-height: 25px;
}
#kronolithNav a {
    display: block;
    float: left;
    margin: 0 1px 0 0;
    padding: 0 5px 0 25px;
    background-color: #f0f0f0;
    background-position: 5px center;
    background-repeat: no-repeat;
    font-weight: bold;
    text-decoration: none;
    color: #202020;
    cursor: pointer;
}
#kronolithNav a:first-child {
    -moz-border-radius-topleft: 5px;
    -moz-border-radius-bottomleft: 5px;
    -webkit-border-top-left-radius: 5px;
    -webkit-border-bottom-left-radius: 5px;
}
#kronolithNav a:last-child {
    -moz-border-radius-topright: 5px;
    -moz-border-radius-bottomright: 5px;
    -webkit-border-top-right-radius: 5px;
    -webkit-border-bottom-right-radius: 5px;
}
#kronolithNav a:first-child:last-child {
    -moz-border-radius: 5px;
    -webkit-border-radius: 5px;
}
#kronolithNav a:hover, #kronolithNav a.on {
    background-color: #d9d9d9;
}
#kronolithNavTasks {
    background-image: url("graphics/tasks.png");
}
#kronolithNavAgenda {
    background-image: url("graphics/agenda.png");
}
#kronolithNavDay {
    background-image: url("graphics/dayview.png");
}
#kronolithNavWeek {
    background-image: url("graphics/weekview.png");
}
#kronolithNavMonth {
    background-image: url("graphics/monthview.png");
}
#kronolithNavYear {
    background-image: url("graphics/yearview.png");
}

/* Event/task form dialogs */
.kronolithDialog {
    width: 700px;
    padding: 10px 20px;
    background: #efefef;
    border: 1px #c0c0c0 solid;
}
/* ... */

